# docs/swagger.yaml
@@ -35,6 +35,13 @@ definitions:
       message:
         type: string
     type: object
+  handler.ShowOpeningResponse:
+    properties:
+      data:
+        $ref: '#/definitions/schemas.OpeningResponse'
+      message:
+        type: string
+    type: object
   schemas.OpeningResponse:
     properties:
       company:
@@ -65,7 +72,7 @@ paths:
     delete:
       consumes:
       - application/json
-      description: Delete a new job opening
+      description: Delete a job opening
       parameters:
       - description: Opening identification
         in: query
@@ -79,6 +86,33 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/handler.DeleteOpeningResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+        "404":
+          description: Not Found
+          schema:
+            $ref: '#/definitions/handler.ErrorResponse'
+      tags:
+      - Openings
+    get:
+      consumes:
+      - application/json
+      description: Show a job opening
+      parameters:
+      - description: Opening identification
+        in: query
+        name: id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/handler.ShowOpeningResponse'
         "400":
           description: Bad Request
           schema:
